# legacy-reverse-mcp

./: .gitignore  CHANGELOG.md  README.md  README.ru.md  cli.py  mcp_server.py  pyproject.toml
analysis/: __init__.py  common.py  context_pack.py  explain.py  flat_arch.py  impact.py  layers.py  report.py  trace.py
docs/: confidence-model.md  current-state.md  evidence-layer.md  evidence-model.md  golden-questions.md  integration-qwen-gigacode.md  limitations.md  mcp-api.md
eval/: README.md  golden_questions.yaml  run_golden_questions.py
index/: findings.py  queries.py  repository.py  schema.sql  search.py
models/: __init__.py  evidence.py
review/: 2026-07-07-combined-review-master-pr4-pr5.md  2026-07-09-agent-bottlenecks-saldo-scan.md  2026-07-09-low-confidence-finding-precision.md  2026-07-20-mcp-layers-positioning.md  layer3-design.md
scanner/: config_scanner.py  dependency_scanner.py  endpoint_scanner.py  fact_emitter.py  java_indexer.py  java_parser.py  pipeline.py  repo_scanner.py  spring_scanner.py
summarizer/: batch_generate.py  class_summary.py  context_pack.py  describe.py  harness.py  llm.py  package_summary.py
tests/: conftest.py  test_batch_generate.py  test_batch_generate_cbmc.py  test_cbmc_config.py  test_change_impact.py  test_cli.py  test_config_scan.py  test_context_pack.py  test_ctor_injection.py  test_describe.py  test_describe_cache_resilience.py  test_endpoint_reattribution.py  test_explain_class.py  test_fact_emission.py  test_facts_repository.py  test_findings_persistence.py  test_flat_arch.py  test_flat_arch_import.py  test_models.py  (+16 more)
(+10 files in other folders)
